Text align center to ensure all texts are in the center

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -217,6 +217,7 @@ body {
 .card-main {
   flex: 1;
   display: flex;
+  text-align: center;
   justify-content: center;
   align-items: center;
   font-size: 42pt;
